started with the css for the layout

--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>New page</title>
+        <!-- <meta name="description" content="">
+        <meta name="author" content=""> -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <title>Trillo Project</title>         
     </head>
     <body>
-        <h1>Trillo</h1>
+        <h1>Trillo &mdash; Your all in one booking app</h1>
+        <div class="container">
+            <header class="header">
+                Header here
+            </header>
+            <div class="content">
+                <nav class="sidebar">
+                    Navigation
+                </nav>
+                <main class="hotel-view">
+                    Hotel View
+                </main>
+            </div>
+        </div>
     </body>
 </html>
