added updated images folder and fontawesome cdn

--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- <meta name="description" content="">
         <meta name="author" content=""> -->
+        <link rel="icon" href="img/favicon_io_trillo/favicon.ico" sizes="16x16" type="img/png">
+        <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <title>Trillo Project</title>         
+        <title>Trillo Project</title>
     </head>
     <body>
         <h1>Trillo &mdash; Your all in one booking app</h1>
         <div class="container">
             <header class="header">
-                Header here
+                <img src="img/logo.png" alt="Trillo Logo" class="logo">
+                <form action="#" class="search">
+                    <input type="text" class="search_input" placeholder="Search Hotels">
+                    <button class="search__button"></button>
+                </form>
             </header>
             <div class="content">
                 <nav class="sidebar">
                     Navigation
-                </nav>
+</nav>
                 <main class="hotel-view">
                     Hotel View
-                </main>
+</main>
             </div>
         </div>
     </body>
