--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <!-- <meta name="description" content="">
         <meta name="author" content=""> -->
         <link rel="icon" href="img/favicon_io_trillo/favicon.ico" sizes="16x16" type="img/png">
-        <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <title>Trillo Project</title>
@@ -18,7 +17,11 @@
                 <img src="img/logo.png" alt="Trillo Logo" class="logo">
                 <form action="#" class="search">
                     <input type="text" class="search_input" placeholder="Search Hotels">
-                    <button class="search__button"></button>
+                    <button class="search__button">
+                        <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                        </svg>
+                    </button>
                 </form>
             </header>
             <div class="content">
