--- a/index.html
+++ b/index.html
@@ -16,14 +16,28 @@
             <header class="header">
                 <img src="img/logo.png" alt="Trillo Logo" class="logo">
                 <form action="#" class="search">
-                    <input type="text" class="search_input" placeholder="Search Hotels">
+                    <input type="text" class="search__input" placeholder="Search Hotels">
                     <button class="search__button">
                         <svg class="search__icon">
                             <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
                         </svg>
                     </button>
                 </form>
+                <nav class="user-nav">
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-bookmark"></use>
+                        </svg>
+                        <span class="user-nav__notification">7</span>
+                    </div>
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-chat"></use>
+                        </svg>
+                    </div>
+                </nav>
             </header>
+            
             <div class="content">
                 <nav class="sidebar">
                     Navigation
