--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
                     <div class="user-nav__icon-box">
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-chat"></use>
+                            <span class="user-nav__notification">13</span>
                         </svg>
+                    </div>
+                    <div class="user-nav__user">
+                        <img src="img/user.jpg" alt="user photo" class="user-nav__user-photo">
+                        <span class="user-nav__user-name">Jonas</span>
                     </div>
                 </nav>
             </header>
-            
             <div class="content">
                 <nav class="sidebar">
                     Navigation
