--- a/index.html
+++ b/index.html
@@ -115,12 +115,46 @@
                             <svg class="overview__icon-location">
                                 <use xlink:href="img/sprite.svg#icon-location-pin"></use>
                             </svg>
-                            <button class="btn-inline">Albufeira, Portugal</button>
+                            <button class="btn-inline" type="button">Albufeira, Portugal</button>
                         </div>
                         <div class="overview__rating">
                             <div class="overview__rating-average">8.6</div>
                             <div class="overview__rating-count">420 votes</div>
                         </div>
+                    </div>
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Nisi esse architecto aliquam vel numquam repudiandae dicta eius 
+                                voluptas doloremque sunt. </p>
+                            <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, ratione!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, ratione!  </p>
+                            <ul class="list">
+                                <li class="list__item">Close to the beach</li>
+                                <li class="list__item">Breakfast included</li>
+                                <li class="list__item">Free airport shuttle</li>
+                                <li class="list__item">Free wifi in all rooms</li>
+                                <li class="list__item">Air conditioning and heating</li>
+                                <li class="list__item">Pets allowed</li>
+                                <li class="list__item">We speak all languages</li>
+                                <li class="list__item">Family Friendly</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lucy and 3 other friends recommend this hotel. </p>
+                                <div class="recommend__friends">
+                                    <img src="img/user-3.jpg" alt="Friend 1" class="recommend__photo">
+                                    <img src="img/user-4.jpg" alt="Friend 2" class="recommend__photo">
+                                    <img src="img/user-5.jpg" alt="Friend 3" class="recommend__photo">
+                                    <img src="img/user-6.jpg" alt="Friend 4" class="recommend__photo">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-reviews">
+                            user reviews
+</div>
                     </div>
                 </main>
             </div>
