--- a/index.html
+++ b/index.html
@@ -153,8 +153,41 @@
                             </div>
                         </div>
                         <div class="user-reviews">
-                            user reviews
-</div>
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                    Fugit necessitatibus minima eius facilis quia dolore aliquid 
+                                    placeat quos aspernatur tempore?
+</blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="User 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Robert Smith</p>
+                                        <p class="review__user-date">May 5th, 2019</p>
+                                    </div>
+                                    <div class="review__rating">7.8</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                    Fugit necessitatibus minima eius facilis quia dolore aliquid 
+                                    placeat quos aspernatur tempore?
+</blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="User 2" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Missandre Kalokohan</p>
+                                        <p class="review__user-date">February 20th, 2019</p>
+                                    </div>
+                                    <div class="review__rating">8.8</div>
+                                </figcaption>
+                            </figure>
+                            <button class="btn-inline">
+                                Show all 
+                                <span>&rarr;</span>
+                            </button>
+                        </div>
                     </div>
                 </main>
             </div>
