almost done with media queries

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- <meta name="description" content="">
         <meta name="author" content=""> -->
         <link rel="icon" href="img/favicon_io_trillo/favicon.ico" sizes="16x16" type="img/png">
@@ -188,6 +189,14 @@
                                 <span>&rarr;</span>
                             </button>
                         </div>
+                    </div>
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good news! We have 4 free rooms for your selected dates! </h2>
+                        <button class="btn">
+                            <span class="btn__visible">Book Now</span>
+                            <span class="btn__invisible">Only 4 rooms left!</span> 
+                        </button>
                     </div>
                 </main>
             </div>
